--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -29,12 +29,12 @@ fra:
       index: "Transactions"
       select: "Ajouter une transaction"
     backend/animal_groups:
-      edit: "Modifier le groupe d'animaux\_: %{name}"
-      index: "Groupes d'animaux"
-      new: "Nouveau groupe d'animaux"
+      edit: "Modifier le groupe d’animaux\_: %{name}"
+      index: "Groupes d’animaux"
+      new: "Nouveau groupe d’animaux"
       show: "Groupe\_: %{name}"
     backend/animals:
-      edit: "Modifier l'animal\_: %{name}"
+      edit: "Modifier l’animal\_: %{name}"
       index: "Animaux"
       new: "Nouvel animal"
       picture: "Photo"
@@ -61,7 +61,7 @@ fra:
       edit: "Modifier une installation"
       index: "Installations (bâtiments, réservoir)"
       new: "Ajout d’une installation"
-      show: "Détail de l'installation\_: %{name}"
+      show: "Détail de l’installation\_: %{name}"
     backend/campaigns:
       edit: "Campagne\_: %{name}"
       index: "Campagnes"
@@ -175,7 +175,7 @@ fra:
       new: "Ajout d’un nouveau lien"
       # show: "Show backend/entity link"
     backend/equipments:
-      edit: "Modifier l'équipement\_: %{name}"
+      edit: "Modifier l’équipement\_: %{name}"
       index: "Équipements"
       new: "Ajouter un nouvel équipement"
       show: "Équipement %{name}"
@@ -196,19 +196,19 @@ fra:
       # show: "Show backend/help"
       # toggle: "Toggle backend/help"
     backend/incidents:
-      edit: "Modifier l'incident\_: %{name} (%{nature})"
+      edit: "Modifier l’incident\_: %{name} (%{nature})"
       index: "Incidents"
       new: "Nouvel incident"
       show: "Incident %{name} (%{nature})"
     backend/incoming_deliveries:
-      confirm: "Confirmer l’arrivée de la livraison"
-      edit: "Modifier l’arrivage: %{number}"
-      index: "Livraisons entrantes"
-      new: "Enregistrer un nouveau arrivage"
+      confirm: "Confirmer l’arrivée de l’approvisionnement"
+      edit: "Modifier l’approvisionnement: %{number}"
+      index: "Approvisionnements"
+      new: "Enregistrer un nouvel approvisionnement"
     backend/incoming_delivery_modes:
-      edit: "Modifier le mode de réception d’arrivage: %{name}"
-      index: "Modes de réception d’arrivage"
-      new: "Créer un mode de réception d’arrivage"
+      edit: "Modifier le mode d’approvisionnement: %{name}"
+      index: "Modes d’approvisionnement"
+      new: "Créer un mode d’approvisionnement"
     backend/incoming_payment_modes:
       edit: "Modifier le mode d’encaissement\_: %{name}"
       index: "Modes d’encaissement"
@@ -246,7 +246,7 @@ fra:
     backend/kujakus:
       # toggle: "Toggle backend/kujaku"
     backend/land_parcel_clusters:
-      edit: "Modifier l'ilôt\_: %{name}"
+      edit: "Modifier l’ilôt\_: %{name}"
       index: "Ilôts"
       new: "Ajouter un nouvel ilôt"
       show: "Ilôt %{name}"
@@ -377,9 +377,9 @@ fra:
       new: "Créer un lot"
       show: "Lot\_: %{name}"
     backend/product_indicator_data:
-      edit: "Modifier la valeur d'un indicateur"
+      edit: "Modifier la valeur d’un indicateur"
       index: "Indicateurs Produits"
-      new: "Nouvelle valeur d'indicateur pour un produit"
+      new: "Nouvelle valeur d’indicateur pour un produit"
       show: "Valeurs"
     backend/product_links:
       # edit: "Edit backend/product link"
@@ -387,10 +387,10 @@ fra:
       # new: "New backend/product link"
       # show: "Show backend/product link"
     backend/product_localizations:
-      edit: "Modifier une localisation d'un produit"
+      edit: "Modifier une localisation d’un produit"
       index: "Tracabilité des produits"
-      new: "Nouvelle localisation d'un produit"
-      show: "Détail d'une localisation d'un produit"
+      new: "Nouvelle localisation d’un produit"
+      show: "Détail d’une localisation d’un produit"
     backend/product_memberships:
       # edit: "Edit backend/product membership"
       # index: "Index backend/product membership"
@@ -698,13 +698,13 @@ fra:
   errors:
     messages:
       already_confirmed: "a déjà été validé(e)"
-      confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s'il vous plait"
-      expired: "a expiré, merci d'en faire une nouvelle demande"
-      not_found: "n'a pas été trouvé(e)"
-      not_locked: "n'était pas verrouillé(e)"
+      confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s’il vous plait"
+      expired: "a expiré, merci d’en faire une nouvelle demande"
+      not_found: "n’a pas été trouvé(e)"
+      not_locked: "n’était pas verrouillé(e)"
       not_saved:
-        one: "1 erreur a empêché ce(tte) %{resource} d'être sauvegardé(e) :"
-        other: "%{count} erreurs ont empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+        one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e) :"
+        other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e) :"
     template:
       body: "Il y a eu des problèmes avec les champs suivants\_:"
       header:
@@ -1488,10 +1488,10 @@ fra:
     to_date: "Au"
     to_deliver: "Livrer"
     to_deposit: "À encaisser"
-    today: "Aujourd'hui"
+    today: "Aujourd’hui"
     tool_update: "Modifier le matériel"
     tools: "Outils"
-    tools_list: "Liste d'outils"
+    tools_list: "Liste d’outils"
     total: "Total"
     total_amount: "Montant total HT"
     total_in_currency: "Total (%{currency})"
@@ -1689,7 +1689,7 @@ fra:
     changes_have_not_been_reflected: "Les changements n’ont pas pu être correctement répercutés sur l’état des stocks actuel"
     closed_financial_years: "L’exercice a été correctement clôturé"
     columns_are_already_uses: "Une ou plusieurs colonnes à importer sont sélectionnées plusieurs fois"
-    dashboard_is_being_developed: "Les tableaux de bord sont en cours d'élaboration"
+    dashboard_is_being_developed: "Les tableaux de bord sont en cours d’élaboration"
     draft_entry_items_are_validated:
       one: "%{count} ligne de brouillard validée"
       other: "%{count} lignes de brouillard validées"
