--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -36,12 +36,12 @@ arb:
       # index: "Transactions"
       # select: "Ajouter une transaction"
     backend/animal_groups:
-      # edit: "Modifier le groupe d'animaux\_: %{name}"
-      # index: "Groupes d'animaux"
-      # new: "Nouveau groupe d'animaux"
+      # edit: "Modifier le groupe d’animaux\_: %{name}"
+      # index: "Groupes d’animaux"
+      # new: "Nouveau groupe d’animaux"
       # show: "Groupe\_: %{name}"
     backend/animals:
-      # edit: "Modifier l'animal\_: %{name}"
+      # edit: "Modifier l’animal\_: %{name}"
       # index: "Animaux"
       # new: "Nouvel animal"
       # picture: "Photo"
@@ -206,7 +206,7 @@ arb:
       index: "انواع الملفات" #?
       new: "اضافة نوع ملف جديد" #?
     backend/equipments:
-      # edit: "Modifier l'équipement\_: %{name}"
+      # edit: "Modifier l’équipement\_: %{name}"
       # index: "Équipements"
       # new: "Ajouter un nouvel équipement"
       # show: "Équipement %{name}"
@@ -236,19 +236,19 @@ arb:
     backend/helps:
       # index: "Aide"
     backend/incidents:
-      # edit: "Modifier l'incident\_: %{name} (%{nature})"
+      # edit: "Modifier l’incident\_: %{name} (%{nature})"
       # index: "Incidents"
       # new: "Nouvel incident"
       # show: "Incident %{name} (%{nature})"
     backend/incoming_deliveries:
-      # confirm: "Confirmer l’arrivée de la livraison"
-      # edit: "Modifier l’arrivage: %{number}"
-      # index: "Livraisons entrantes"
-      # new: "Enregistrer un nouveau arrivage"
+      # confirm: "Confirmer l’arrivée de l’approvisionnement"
+      # edit: "Modifier l’approvisionnement: %{number}"
+      # index: "Approvisionnements"
+      # new: "Enregistrer un nouvel approvisionnement"
     backend/incoming_delivery_modes:
-      # edit: "Modifier le mode de réception d’arrivage: %{name}"
-      # index: "Modes de réception d’arrivage"
-      # new: "Créer un mode de réception d’arrivage"
+      # edit: "Modifier le mode d’approvisionnement: %{name}"
+      # index: "Modes d’approvisionnement"
+      # new: "Créer un mode d’approvisionnement"
     backend/incoming_payment_modes:
       edit: "تعديل طريقة الدفعة: %{name}"
       index: "طرق تسديد الدفعات"
@@ -289,7 +289,7 @@ arb:
       show: "الدفتر اليومي : %{name} (%{code})"
     backend/kujakus: #?
     backend/land_parcel_clusters:
-      # edit: "Modifier l'ilôt\_: %{name}"
+      # edit: "Modifier l’ilôt\_: %{name}"
       # index: "Ilôts"
       # new: "Ajouter un nouvel ilôt"
       # show: "Ilôt %{name}"
@@ -427,19 +427,19 @@ arb:
       # show: "Lot\_: %{name}"
     backend/product_indicator_choices: #?
     backend/product_indicator_data:
-      # edit: "Modifier la valeur d'un indicateur"
+      # edit: "Modifier la valeur d’un indicateur"
       # index: "Indicateurs Produits"
-      # new: "Nouvelle valeur d'indicateur pour un produit"
+      # new: "Nouvelle valeur d’indicateur pour un produit"
       # show: "Valeurs"
     backend/product_indicator_nature_choices: #?
     backend/product_indicator_natures: #?
     backend/product_indicators: #?
     backend/product_links: #?
     backend/product_localizations:
-      # edit: "Modifier une localisation d'un produit"
+      # edit: "Modifier une localisation d’un produit"
       # index: "Tracabilité des produits"
-      # new: "Nouvelle localisation d'un produit"
-      # show: "Détail d'une localisation d'un produit"
+      # new: "Nouvelle localisation d’un produit"
+      # show: "Détail d’une localisation d’un produit"
     backend/product_memberships: #?
     backend/product_moves:
       edit: "تعديل حركة سهم : %{name}"
@@ -757,13 +757,13 @@ arb:
   errors:
     messages:
       # already_confirmed: "a déjà été validé(e)"
-      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s'il vous plait"
-      # expired: "a expiré, merci d'en faire une nouvelle demande"
-      # not_found: "n'a pas été trouvé(e)"
-      # not_locked: "n'était pas verrouillé(e)"
+      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s’il vous plait"
+      # expired: "a expiré, merci d’en faire une nouvelle demande"
+      # not_found: "n’a pas été trouvé(e)"
+      # not_locked: "n’était pas verrouillé(e)"
       not_saved:
-        # one: "1 erreur a empêché ce(tte) %{resource} d'être sauvegardé(e) :"
-        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e) :"
+        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e) :"
     template:
       # body: "Il y a eu des problèmes avec les champs suivants\_:"
       header:
@@ -1651,11 +1651,11 @@ arb:
     to_date: "الى تاريخ"
     to_deliver: "للتسليم"
     # to_deposit: "À encaisser"
-    # today: "Aujourd'hui"
+    # today: "Aujourd’hui"
     tool_create: "اضافة مادة" #?
     tool_update: "تعديل المادة"
     tools: "مادة مستخدمة"
-    # tools_list: "Liste d'outils"
+    # tools_list: "Liste d’outils"
     total: "المجموع"
     total_amount: "صافي اجمالي الكمية"
     # total_in_currency: "Total (%{currency})"
@@ -1864,7 +1864,7 @@ arb:
     changes_have_not_been_reflected: "لم تكن تنعكس هذه التغييرات بشكل صحيح على الوضع الحالي للأسهم"
     closed_financial_years: "تم اغلاق السنة المالية بشكل صحيح"
     columns_are_already_uses: "تم اخيار عامود او اكثر للتحميل لمرات عدة"
-    # dashboard_is_being_developed: "Les tableaux de bord sont en cours d'élaboration"
+    # dashboard_is_being_developed: "Les tableaux de bord sont en cours d’élaboration"
     draft_entry_items_are_validated:
       # one: "%{count} ligne de brouillard validée"
       # other: "%{count} lignes de brouillard validées"
