--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -783,13 +783,13 @@ arb:
   errors:
     messages:
       # already_confirmed: "a déjà été validé(e)"
-      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s’il vous plait"
-      # expired: "a expiré, merci d’en faire une nouvelle demande"
-      # not_found: "n’a pas été trouvé(e)"
-      # not_locked: "n’était pas verrouillé(e)"
+      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s'il vous plait"
+      # expired: "a expiré, merci d'en faire une nouvelle demande"
+      # not_found: "n'a pas été trouvé(e)"
+      # not_locked: "n'était pas verrouillé(e)"
       not_saved:
-        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e) :"
-        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e) :"
+        # one: "1 erreur a empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d'être sauvegardé(e) :"
     template:
       # body: "Il y a eu des problèmes avec les champs suivants\_:"
       header:
@@ -1490,6 +1490,12 @@ arb:
     product_update: "تعديل تفاصيل المنتج"
     production: "ادارة الانتاج"
     productions: "المنتجات"
+    productions_states:
+      # aborted: "Annulées"
+      # all: "Toutes"
+      # draft: "Brouillons"
+      # started: "En cours"
+      # validated: "Validées"
     products: "فئة المنتج"
     products_states:
       # active: "Actifs"
