--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -697,13 +697,13 @@ eng:
   errors:
     messages:
       # already_confirmed: "a déjà été validé(e)"
-      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s’il vous plait"
-      # expired: "a expiré, merci d’en faire une nouvelle demande"
-      # not_found: "n’a pas été trouvé(e)"
-      # not_locked: "n’était pas verrouillé(e)"
+      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s'il vous plait"
+      # expired: "a expiré, merci d'en faire une nouvelle demande"
+      # not_found: "n'a pas été trouvé(e)"
+      # not_locked: "n'était pas verrouillé(e)"
       not_saved:
-        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e) :"
-        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e) :"
+        # one: "1 erreur a empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d'être sauvegardé(e) :"
     template:
       body: "There were problems with the following fields:"
       header:
@@ -1365,6 +1365,12 @@ eng:
     # product_update: "Modifier la fiche du produit"
     # production: "Gestion de la production"
     productions: "Productions"
+    productions_states:
+      # aborted: "Annulées"
+      # all: "Toutes"
+      # draft: "Brouillons"
+      # started: "En cours"
+      # validated: "Validées"
     products: "Products"
     products_states:
       active: "Active"
