--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -1517,6 +1517,18 @@ spa:
       # label: "%{product} / %{amount} %{currency}"
       # no_range: "Pas d’intervalle"
       # range: "De %{min} à %{max}"
+    production:
+      # bookkeep: "[%{resource} %{number}] %{products} pour %{client} (%{sale})"
+      label:
+        # aborted: "Production annulée %{identification}"
+        # draft: "Production prévue %{identification}"
+        # started: "Production en cours %{identification}"
+        # validated: "Production validée %{identification}"
+      states:
+        # aborted: "Annulée"
+        # draft: "Prévue"
+        # started: "En cours"
+        # validated: "Validée"
     purchase:
       # bookkeep: "[%{resource} %{number}] %{products} de %{supplier}"
       # label: "%{supplier} à %{address}"
