--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -609,7 +609,7 @@ eng:
     bank: "Bank" #?
     # bank_account_key: "Clé RIB"
     # bank_account_number: "Numéro de compte bancaire"
-    # bank_agency_address: "Adresse de l'agence bancaire"
+    # bank_agency_address: "Adresse de l’agence bancaire"
     # bank_agency_code: "Code guichet"
     # bank_check_number: "N°Chèque"
     bank_code: "Bank code"
@@ -1463,7 +1463,7 @@ eng:
         # collectivity: "Collectivité"
         # company: "Société"
         # doctor: "Docteur"
-        # economic_interest_group: "Groupement d'intérêt économique"
+        # economic_interest_group: "Groupement d’intérêt économique"
         # entity: "Entité"
         # foundation: "Fondation"
         # legal_entity: "Personne morale"
@@ -1471,7 +1471,7 @@ eng:
         # person: "Personne"
         # professor: "Professeur"
         # public_establisment: "Établissement public"
-        # public_interest_group: "Groupement d'intérêt public"
+        # public_interest_group: "Groupement d’intérêt public"
         # sir: "Monsieur"
         # syndicate: "Syndicat"
     entity_address:
@@ -1529,7 +1529,7 @@ eng:
     per_frequency_time_unit: #?
     procedure:
       nomen:
-        # animal_birth: "Naissance d'un animal"
+        # animal_birth: "Naissance d’un animal"
         # calving_one: "Vêlage unique"
         # calving_twin: "Vêlage jumeaux"
         # chemical_treatment: "Traitement chimique"
