--- a/config/locales/fra/countries.yml
+++ b/config/locales/fra/countries.yml
@@ -43,7 +43,7 @@ fra:
     cf: "Centrafricaine, République"
     cg: "Congo"
     ch: "Suisse"
-    ci: "Côte D'Ivoire"
+    ci: "Côte D’Ivoire"
     ck: "Cook, Îles"
     cl: "Chili"
     cm: "Cameroun"
@@ -104,9 +104,9 @@ fra:
     il: "Israël"
     im: "Île De Man"
     in: "Inde"
-    io: "Océan Indien, Territoire Britannique De L'"
+    io: "Océan Indien, Territoire Britannique De L’"
     iq: "Iraq"
-    ir: "Iran, République Islamique D'"
+    ir: "Iran, République Islamique D’"
     is: "Islande"
     it: "Italie"
     je: "Jersey"
@@ -142,7 +142,7 @@ fra:
     mf: "Saint-Martin"
     mg: "Madagascar"
     mh: "Marshall, Îles"
-    mk: "Macédoine, L'Ex-République Yougoslave De"
+    mk: "Macédoine, L’Ex-République Yougoslave De"
     ml: "Mali"
     mm: "Myanmar"
     mn: "Mongolie"
