--- a/config/locales/fra/currencies.yml
+++ b/config/locales/fra/currencies.yml
@@ -8,7 +8,7 @@ fra:
     AOA: "Kwanza angolais"
     ARS: "Peso argentin"
     AUD: "Dollar australien"
-    AWG: "Florin d'Aruba"
+    AWG: "Florin d’Aruba"
     AZN: "Nouveau manat azéri"
     BAM: "Marka (monnaie)"
     BBD: "Dollar de la Barbade"
@@ -144,7 +144,7 @@ fra:
     TJS: "Somoni"
     TMT: "Manat turkmène"
     TND: "Dinar tunisien"
-    TOP: "Pa'anga"
+    TOP: "Pa’anga"
     TRY: "Livre turque"
     TTD: "Dollar de Trinité-et-Tobago"
     TWD: "Dollar taïwanais"
