--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -477,7 +477,7 @@ jpn:
       # import: "Importer des données"
       # restore: "Restaurer une sauvegarde"
     backend/settlements:
-      # edit: "Modifier l'installation\_: %{name}"
+      # edit: "Modifier l’installation\_: %{name}"
       # index: "Installations"
       # new: "Nouvelle installation"
       # show: "Installation\_: %{name}"
