--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -7,7 +7,7 @@ jpn:
         # collectivity: "Collectivité"
         # company: "Société"
         # doctor: "Docteur"
-        # economic_interest_group: "Groupement d'intérêt économique"
+        # economic_interest_group: "Groupement d’intérêt économique"
         # entity: "Entité"
         # foundation: "Fondation"
         # legal_entity: "Personne morale"
@@ -15,12 +15,12 @@ jpn:
         # person: "Personne"
         # professor: "Professeur"
         # public_establisment: "Établissement public"
-        # public_interest_group: "Groupement d'intérêt public"
+        # public_interest_group: "Groupement d’intérêt public"
         # sir: "Monsieur"
         # syndicate: "Syndicat"
     procedure:
       nomen:
-        # animal_birth: "Naissance d'un animal"
+        # animal_birth: "Naissance d’un animal"
         # calving_one: "Vêlage unique"
         # calving_twin: "Vêlage jumeaux"
         # chemical_treatment: "Traitement chimique"
@@ -95,7 +95,7 @@ jpn:
         # collectivity: "Collectivité"
         # company: "Société"
         # doctor: "Docteur"
-        # economic_interest_group: "Groupement d'intérêt économique"
+        # economic_interest_group: "Groupement d’intérêt économique"
         # entity: "Entité"
         # foundation: "Fondation"
         # legal_entity: "Personne morale"
@@ -103,7 +103,7 @@ jpn:
         # person: "Personne"
         # professor: "Professeur"
         # public_establisment: "Établissement public"
-        # public_interest_group: "Groupement d'intérêt public"
+        # public_interest_group: "Groupement d’intérêt public"
         # sir: "Monsieur"
         # syndicate: "Syndicat"
     indicators:
@@ -137,8 +137,8 @@ jpn:
           # swelling: "Gonflement"
           # tillering: "Tallage"
       items:
-        # animal_disease_state: "Phase du bioprocessus de maladie d'un animal"
-        # animal_life_state: "Phase du bioprocessus de vie d'un animal"
+        # animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
+        # animal_life_state: "Phase du bioprocessus de vie d’un animal"
         # cells_concentration: "Dénombrement des cellules somatiques"
         # clostridial_spores_concentration: "Concentration en spores butyriques"
         # fat_matters_concentration: "Teneur en matières grasses"
@@ -148,10 +148,10 @@ jpn:
         # in_production: "En production"
         # inhibitors_presence: "Présence de résidus d’inhibiteurs"
         # lipolysis: "Lipolyse"
-        # mammalia_lactation_state: "Phase du bioprocessus de lactation d'un mammifère"
-        # mammalia_reproduction_state: "Phase du bioprocessus de reproduction d'un mammifère"
-        # plant_life_state: "Phase du bioprocessus de vie d'un végétal"
-        # plant_reproduction_state: "Phase du bioprocessus de reproduction d'un végétal"
+        # mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
+        # mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
+        # plant_life_state: "Phase du bioprocessus de vie d’un végétal"
+        # plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
         # protein_matters_concentration: "Teneur en matières protéïques"
         # sowable: "Semable"
         # temperature: "Température"
@@ -173,7 +173,7 @@ jpn:
       attributes:
         # abilities: "Compétences"
         # active: "Actif"
-        # asset_account: "Compte d'immobilisation"
+        # asset_account: "Compte d’immobilisation"
         # atomic: "Irréductible"
         # category: "Categorie"
         # charge_account: "Compte de charge"
@@ -259,7 +259,7 @@ jpn:
         # sus: "Porcins"
       # name: "Animaux"
   procedures:
-    # animal_birth: "Naissance d'un animal"
+    # animal_birth: "Naissance d’un animal"
     # calving_one: "Vêlage unique"
     # calving_twin: "Vêlage jumeaux"
     # chemical_treatment: "Traitement chimique"
