--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1009,7 +1009,7 @@ arb:
     bank: "البنك" #?
     # bank_account_key: "Clé RIB"
     # bank_account_number: "Numéro de compte bancaire"
-    # bank_agency_address: "Adresse de l'agence bancaire"
+    # bank_agency_address: "Adresse de l’agence bancaire"
     # bank_agency_code: "Code guichet"
     # bank_check_number: "N°Chèque"
     bank_code: "الرمز المصرفي"
@@ -1913,7 +1913,7 @@ arb:
         # collectivity: "Collectivité"
         # company: "Société"
         # doctor: "Docteur"
-        # economic_interest_group: "Groupement d'intérêt économique"
+        # economic_interest_group: "Groupement d’intérêt économique"
         # entity: "Entité"
         # foundation: "Fondation"
         # legal_entity: "Personne morale"
@@ -1921,7 +1921,7 @@ arb:
         # person: "Personne"
         # professor: "Professeur"
         # public_establisment: "Établissement public"
-        # public_interest_group: "Groupement d'intérêt public"
+        # public_interest_group: "Groupement d’intérêt public"
         # sir: "Monsieur"
         # syndicate: "Syndicat"
     entity_address:
@@ -1975,7 +1975,7 @@ arb:
     per_frequency_time_unit: #?
     procedure:
       nomen:
-        # animal_birth: "Naissance d'un animal"
+        # animal_birth: "Naissance d’un animal"
         # calving_one: "Vêlage unique"
         # calving_twin: "Vêlage jumeaux"
         # chemical_treatment: "Traitement chimique"
