--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -546,7 +546,7 @@ fra:
       import: "Importer des données"
       restore: "Restaurer une sauvegarde"
     backend/settlements:
-      edit: "Modifier l'installation\_: %{name}"
+      edit: "Modifier l’installation\_: %{name}"
       index: "Installations"
       new: "Nouvelle installation"
       show: "Installation\_: %{name}"
