--- a/config/locales/jpn/devise.views.yml
+++ b/config/locales/jpn/devise.views.yml
@@ -12,15 +12,15 @@ jpn:
       reset_password_instructions:
         # action: "Changer mon mot de passe"
         # greeting: "Bonjour %{recipient}!"
-        # instruction: "Quelqu'un a demandé un lien pour changer votre mot de passe, le voici :"
-        # instruction_2: "Si vous n'avez pas émis cette demande, merci d'ignore cet email."
-        # instruction_3: "Votre mot de passe ne changera pas tant que vous n'aurez pas cliqué sur ce lien et renseigné un nouveau mot de passe."
+        # instruction: "Quelqu’un a demandé un lien pour changer votre mot de passe, le voici :"
+        # instruction_2: "Si vous n’avez pas émis cette demande, merci d’ignore cet email."
+        # instruction_3: "Votre mot de passe ne changera pas tant que vous n’aurez pas cliqué sur ce lien et renseigné un nouveau mot de passe."
         # subject: "Instructions pour réinitialiser votre mot de passe"
       unlock_instructions:
         # action: "Débloquer mon compte"
         # greeting: "Bonjour %{recipient}!"
         # instruction: "Suivez ce lien pour débloquer votre compte:"
-        # message: "Votre compte a été bloqué suite à un nombre d'essais de connexions manqués trop important"
+        # message: "Votre compte a été bloqué suite à un nombre d’essais de connexions manqués trop important"
         # subject: "Instructions pour débloquer votre compte"
     passwords:
       new:
@@ -40,8 +40,8 @@ jpn:
         # sign_in: "Connexion"
     shared:
       links:
-        # didn_t_receive_confirmation_instructions: "Vous n'avez pas reçu le mail de confirmation ?"
-        # didn_t_receive_unlock_instructions: "Vous n'avez pas reçu le mail de débloquage ?"
+        # didn_t_receive_confirmation_instructions: "Vous n’avez pas reçu le mail de confirmation ?"
+        # didn_t_receive_unlock_instructions: "Vous n’avez pas reçu le mail de débloquage ?"
         # forgot_your_password: "Mot de passe oublié ?"
         # sign_in: "Connexion"
         # sign_in_with_provider: "Connexion avec %{provider}"
