--- a/config/locales/spa/devise.yml
+++ b/config/locales/spa/devise.yml
@@ -5,12 +5,12 @@ spa:
       # send_instructions: "Vous allez recevoir les instructions nécessaires à la confirmation de votre compte dans quelques minutes"
       # send_paranoid_instructions: "Si votre e-mail existe dans notre base de données, vous allez bientôt recevoir un e-mail contenant les instructions de confirmation de votre compte."
     failure:
-      # already_authenticated: "Vous êtes déjà connecté !"
-      # inactive: "Votre compte n'est pas encore activé."
+      # already_authenticated: "Vous êtes déjà connecté\_!"
+      # inactive: "Votre compte n’est pas encore activé."
       # invalid: "Email ou mot de passe incorrect."
-      # invalid_token: "Jeton d'authentification incorrect."
+      # invalid_token: "Jeton d’authentification incorrect."
       # locked: "Votre compte est verrouillé."
-      # not_found_in_database: "Nom d'utilisateur ou mot de passe invalide."
+      # not_found_in_database: "Nom d’utilisateur ou mot de passe invalide."
       # timeout: "Votre session est expirée, veuillez vous reconnecter pour continuer."
       # unauthenticated: "Vous devez vous connecter ou vous inscrire pour continuer."
       # unconfirmed: "Vous devez valider votre compte pour continuer."
@@ -22,10 +22,10 @@ spa:
       unlock_instructions:
         # subject: "Instructions pour déverrouiller le compte"
     omniauth_callbacks:
-      # failure: "Nous n'avons pas pu vous authentifier via %{kind} : '%{reason}'."
+      # failure: "Nous n’avons pas pu vous authentifier via %{kind}\_: %{reason}."
       # success: "Authentifié avec succès via %{kind}."
     passwords:
-      # no_token: "Vous ne pouvez accéder à cette page sans passer par un e-mail de réinitialisation de mot de passe. Si vous êtes passé par un e-mail de ce type, assurez-vous d'utiliser l'URL complète."
+      # no_token: "Vous ne pouvez accéder à cette page sans passer par un e-mail de réinitialisation de mot de passe. Si vous êtes passé par un e-mail de ce type, assurez-vous d’utiliser l’URL complète."
       # send_instructions: "Vous allez recevoir les instructions de réinitialisation du mot de passe dans quelques instants"
       # send_paranoid_instructions: "Si votre e-mail existe dans notre base de données, vous allez recevoir un lien de réinitialisation par e-mail"
       # updated: "Votre mot de passe a été édité avec succès, vous êtes maintenant connecté"
@@ -33,7 +33,7 @@ spa:
     registrations:
       # destroyed: "Votre compte a été supprimé avec succès. Nous espérons vous revoir bientôt."
       # signed_up: "Bienvenu, vous êtes connecté"
-      # signed_up_but_inactive: "Vous êtes bien enregistré. Vous ne pouvez cependant pas vous connecter car votre compte n'est pas encore activé."
+      # signed_up_but_inactive: "Vous êtes bien enregistré. Vous ne pouvez cependant pas vous connecter car votre compte n’est pas encore activé."
       # signed_up_but_locked: "Vous êtes bien enregistré. Vous ne pouvez cependant pas vous connecter car votre compte est verrouillé."
       # signed_up_but_unconfirmed: "Un message contenant un lien de confirmation a été envoyé à votre adresse email. Ouvrez ce lien pour activer votre compte."
       # update_needs_confirmation: "Votre compte a bien été mis à jour mais nous devons vérifier votre nouvelle adresse email. Merci de vérifier vos emails et de cliquer sur le lien de confirmation pour finaliser la validation de votre nouvelle adresse."
@@ -48,10 +48,10 @@ spa:
   errors:
     messages:
       # already_confirmed: "a déjà été validé(e)"
-      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s'il vous plait"
-      # expired: "a expiré, merci d'en faire une nouvelle demande"
-      # not_found: "n'a pas été trouvé(e)"
-      # not_locked: "n'était pas verrouillé(e)"
+      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s’il vous plait"
+      # expired: "a expiré, merci d’en faire une nouvelle demande"
+      # not_found: "n’a pas été trouvé(e)"
+      # not_locked: "n’était pas verrouillé(e)"
       not_saved:
-        # one: "1 erreur a empêché ce(tte) %{resource} d'être sauvegardé(e) :"
-        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e) :"
+        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e) :"
