--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -465,6 +465,7 @@ spa:
       # edit: "Modifier l’un transfert de stock"
       # index: "Transferts et pertes de stocks"
       # new: "Ajouter un transfert ou une perte de stocks"
+    backend/production_supports: #?
     backend/productions:
       # edit: "Modifier la production\_: %{name}"
       # index: "Productions"
@@ -697,13 +698,13 @@ spa:
   errors:
     messages:
       # already_confirmed: "a déjà été validé(e)"
-      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s'il vous plait"
-      # expired: "a expiré, merci d'en faire une nouvelle demande"
-      # not_found: "n'a pas été trouvé(e)"
-      # not_locked: "n'était pas verrouillé(e)"
+      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s’il vous plait"
+      # expired: "a expiré, merci d’en faire une nouvelle demande"
+      # not_found: "n’a pas été trouvé(e)"
+      # not_locked: "n’était pas verrouillé(e)"
       not_saved:
-        # one: "1 erreur a empêché ce(tte) %{resource} d'être sauvegardé(e) :"
-        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e) :"
+        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e) :"
     template:
       # body: "Il y a eu des problèmes avec les champs suivants\_:"
       header:
