--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -927,6 +927,7 @@ spa:
     # product_moves: "Product moves"
     # product_nature: "Product nature"
     # product_natures: "Types de produits"
+    # production: "Production"
     # products: "Produits"
     # profession: "Profession"
     # proposer: "Parrain"
@@ -1044,6 +1045,7 @@ spa:
     # supplier_account: "Compte fournisseur associé"
     # supplier_accounts: "Comptes fournisseurs"
     # suppliers: "Fournisseurs"
+    # supports: "Supports"
     # surface_units: "Unités de surface"
     # suspended: "Suspendu"
     # symbol: "Symbole"
