--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -510,6 +510,7 @@ arb:
     backend/production:  #?
       index: "ادارة الانتاج" #?
       unvalidated_operations: "تحقيق الاعمال" #?
+    backend/production_supports: #?
     backend/productions:
       # edit: "Modifier la production\_: %{name}"
       # index: "Productions"
@@ -783,13 +784,13 @@ arb:
   errors:
     messages:
       # already_confirmed: "a déjà été validé(e)"
-      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s'il vous plait"
-      # expired: "a expiré, merci d'en faire une nouvelle demande"
-      # not_found: "n'a pas été trouvé(e)"
-      # not_locked: "n'était pas verrouillé(e)"
+      # confirmation_period_expired: "doit être confirmé sous %{period}, refaites une nouvelle demande s’il vous plait"
+      # expired: "a expiré, merci d’en faire une nouvelle demande"
+      # not_found: "n’a pas été trouvé(e)"
+      # not_locked: "n’était pas verrouillé(e)"
       not_saved:
-        # one: "1 erreur a empêché ce(tte) %{resource} d'être sauvegardé(e) :"
-        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e) :"
+        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e) :"
     template:
       # body: "Il y a eu des problèmes avec les champs suivants\_:"
       header:
