--- a/config/locales/fra/help/activities-index.txt
+++ b/config/locales/fra/help/activities-index.txt
@@ -6,19 +6,15 @@ Une activité regroupe des ensembles de produits, de services qui concourent à 
 Une acticité est établie pour plusieurs années et correspond à un choix organisationnel.
 Elle peut être active ou inactive (clôturée).
 
-Une activité se caractérise par un code, une famille, un objectif et une unité d'oeuvre / de surface.
-
->>> Ex: L'activité BLE TENDRE possède l'unité d'oeuvre : QT et une unité de surface : HA
->>> les indicateurs de gestion seront exprimés à l'aide de ces unités 
+Une activité se caractérise par un nom, un code analytique, un type de centre analytique et une famille.
 
 Une activité peut posséder une activité parente (parfois appellé ATELIER).
 
 >>> Ex: L'activité BLE regroupe les activités BLE TENDRE & BLE DUR
 
-Une activité peut être PRINCIPALE (processus productif) ou AUXILIAIRE (processus support) selon son objectif premier.
+Une activité peut présenter un type de centre dit PRINCIPAL (processus productif) ou AUXILIAIRE (processus support) selon son objectif premier.
 
->>> Ex: L'activité BLE est PRINCIPALE car son objectif premier est de produire.
-
+>>> Ex: L'activité BLE possede un type de centre PRINCIPAL car son objectif premier est de produire.
 >>> Ex: L'activité MECANISATION est AUXILIAIRE car son objectif premier est d'aider les autres activités.
 >>> l'activité BLE se verra donc affecter des charges dites indirectes provenant de l'activité MECANISATION selon la sollicitation de l'une vers l'autre.
 
@@ -26,5 +22,14 @@ Une activité peut être PRINCIPALE (processus productif) ou AUXILIAIRE (process
 
 Elles interviennent :
 
-	* lors de la saisie des opérations et procédures
-	* lors de la [[>backend/journals#draft|saisie comptables]] si vous n'utilisez pas les opérations
+  * lors de la saisie des opérations et procédures
+  * lors de la [[>backend/journals#draft|saisie comptables]] si vous n'utilisez pas les opérations
+
+===== Comment lier des produits aux activités et répartir les charges ? =====
+
+Chaque activité peut être liée à une ou plusieurs [[>backend/productions#index|productions]]
+
+>>> Ex: L'activité BLE TENDRE est lié à la production Grain de BLE TENDRE Campagne 2013 sur la parcelle "Les Palets"
+>>> Un côut de production et un prix de revient pourra être calculé pour chaque unité de Grain de BLE TENDRE produite sur une période donnée.
+
+Chaque ligne comptable peut être liée à une ou plusieurs productions
