--- a/config/locales/fra/help/animals-new.txt
+++ b/config/locales/fra/help/animals-new.txt
@@ -7,10 +7,12 @@ Le type porte notament les codes comptables, le prix par défault, la race de ba
 
 **Race** = la race de l'animal est automatiquement conditionné par son type.
 
-**Numéro de travail** = numéro de boucle ( Bovins : 4 chiffres )
+**Numéro de travail** = numéro de boucle
+>>> Ex : Bovins : 4 chiffres
 
-**Numéro d'identification** = numéro national d'identification ( Bovins : FR + DEPT + 8 chiffres )
+**Numéro d'identification** = numéro national d'identification 
+>>> Ex : Bovins : FR + DEPT + 8 chiffres
 
 **Externe à l'exploitation** = Tout animal que l'on doit utiliser mais qui n'est pas présent sur l'exploitation et qui ne comptera pas dans les stocks
-Ex : mâles reproducteurs dans le cas d'insémination artificielle.
+>>> Ex : mâles reproducteurs dans le cas d'insémination artificielle.
 
